--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
     "@angular/forms": "^18.0.0",
+    "@angular/google-maps": "^18.0.3",
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@emailjs/browser": "^4.3.3",
     "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
